feat: 提交日报提醒方法

--- a/yaoguang-notice/pom.xml
+++ b/yaoguang-notice/pom.xml
@@ -17,6 +17,11 @@
             <groupId>com.qxy</groupId>
             <artifactId>yaoguang-common</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>com.qxy</groupId>
+            <artifactId>yaoguang-system</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
