--- a/yaoguang-api/src/main/resources/application-prod.yml
+++ b/yaoguang-api/src/main/resources/application-prod.yml
@@ -1,5 +1,42 @@
-# 数据源配置
+# 项目相关配置
+yaoguang:
+  # 名称
+  name: YaoGuang
+  # 版本
+  version: 0.0.1
+  # 版权年份
+  copyrightYear: 2024
+  # 文件路径
+  profile: /app/yaoguang/uploadPath
+  # 获取ip地址开关
+  addressEnabled: false
+  # 验证码类型 math 数字计算 char 字符验证
+  captchaType: math
+
 spring:
+  # redis 配置
+  data:
+    redis:
+      # 地址
+      host: redis
+      # 端口，默认为6379
+      port: 6379
+      # 数据库索引
+      database: 0
+      # 密码
+      password:
+      # 连接超时时间
+      timeout: 10s
+      lettuce:
+        pool:
+          # 连接池中的最小空闲连接
+          min-idle: 0
+          # 连接池中的最大空闲连接
+          max-idle: 8
+          # 连接池的最大数据库连接数
+          max-active: 8
+          # #连接池最大阻塞等待时间（使用负值表示没有限制）
+          max-wait: -1ms
   datasource:
     type: com.alibaba.druid.pool.DruidDataSource
     driverClassName: com.mysql.cj.jdbc.Driver
@@ -59,3 +96,10 @@ spring:
         wall:
           config:
             multi-statement-allow: true
+
+# 日志配置
+logging:
+  config: classpath:logback-dev.xml
+  level:
+    com.qxy: debug
+    org.springframework: warn
