--- a/yaoguang-api/src/main/resources/application.yml
+++ b/yaoguang-api/src/main/resources/application.yml
@@ -1,20 +1,3 @@
-# 项目相关配置
-yaoguang:
-  # 名称
-  name: YaoGuang
-  # 版本
-  version: 0.0.1
-  # 版权年份
-  copyrightYear: 2024
-  # 文件路径
-#  profile: /Users/qingxiaoyuan/yaoguang/uploadPath
-#  profile: F:/yaoguang/uploadPath
-  profile: /app/yaoguang/uploadPath
-  # 获取ip地址开关
-  addressEnabled: false
-  # 验证码类型 math 数字计算 char 字符验证
-  captchaType: math
-
 # 开发环境配置
 server:
   # 服务器的HTTP端口，默认为8080
@@ -33,11 +16,6 @@ server:
       # Tomcat启动初始化的线程数，默认值10
       min-spare: 100
 
-# 日志配置
-logging:
-  level:
-    com.qxy: debug
-    org.springframework: warn
 
 # 用户配置
 user:
@@ -54,7 +32,7 @@ spring:
     basename: i18n/messages
   # 资源信息
   profiles:
-    active: druid
+    active: nacos,dev
   # 文件上传
   servlet:
     multipart:
@@ -68,28 +46,6 @@ spring:
       # 热部署开关
       enabled: true
   # redis 配置
-  data:
-    redis:
-      # 地址
-      host: redis
-      # 端口，默认为6379
-      port: 6379
-      # 数据库索引
-      database: 0
-      # 密码
-      password:
-      # 连接超时时间
-      timeout: 10s
-      lettuce:
-        pool:
-          # 连接池中的最小空闲连接
-          min-idle: 0
-          # 连接池中的最大空闲连接
-          max-idle: 8
-          # 连接池的最大数据库连接数
-          max-active: 8
-          # #连接池最大阻塞等待时间（使用负值表示没有限制）
-          max-wait: -1ms
 
 # token配置
 token:
