--- a/yaoguang-common/pom.xml
+++ b/yaoguang-common/pom.xml
@@ -126,6 +126,11 @@
             <artifactId>fastjson2</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.alibaba.boot</groupId>
+            <artifactId>nacos-config-spring-boot-starter</artifactId>
+        </dependency>
+
     </dependencies>
 
 </project>
